<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvName" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etName"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvMobileNum" />

            <EditText
                android:id="@+id/etNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etMobileNum"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPax" />

            <EditText
                android:id="@+id/etPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etPax"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preference" />

            <CheckBox
                android:id="@+id/cbNS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/date" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnReserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#009688"
                    android:text="@string/btnReserve" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F43636"
                    android:text="@string/btnReset" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>